docs: add --enable-preview requirement for cartisan-security users
Add important notice in user manual:
- Business projects using cartisan-security must enable --enable-preview
- Explain compilation dependency chain
- Provide Maven plugin configuration examples
- Clarify which modules require preview feature

Add JV-003 rule in PITFALLS.md:
- Document ScopedValue compilation dependency issue
- Explain why business projects need preview feature enabled
- Provide alternative solutions (don't use cartisan-security)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>